--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <title>{{ page.title }}</title>
 
   <!-- Stylesheet -->
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css" />
+  <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}">
 
   <!-- Favicon -->
   <link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.ico" />
