--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,8 @@
 <body>
   <div class="container">
     <header>
-      <img src="{{ site.baseurl }}/assets/images/kucingSigma.jpg" alt="Profile Picture" class="profile-picture" />
+      <img src="{{ site.baseurl }}/assets/images/jelita2.jpg" alt="Profile Picture" class="profile-picture" />
+  
       <h1>{{ site.title }}</h1>
       <p>{{ site.description }}</p>
     </header>
